--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ opencv-python-headless
 torch
 ultralytics
 opencv-python
+# Note: on CPU-only machines you may want to install CPU-only torch with:
+# python -m pip install --index-url https://download.pytorch.org/whl/cpu torch torchvision
